# walker_algorithm_robot

./: CMakeLists.txt  README.md  license  package.xml
launch/: custom_launch.py
results/: cppcheck.txt  cpplint.txt
results/bag_recordings/rosbag2_2023_11_29-22_47_22/: metadata.yaml  rosbag2_2023_11_29-22_47_22_0.db3
src/: roomba_walker.cpp
