cmake_minimum_required(VERSION 3.8)
project(walker_algorithm_robot)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

add_executable(roomba_walker src/roomba_walker.cpp)
ament_target_dependencies(roomba_walker rclcpp geometry_msgs sensor_msgs)

# Adding the walker node
install(TARGETS
  roomba_walker
  DESTINATION lib/${PROJECT_NAME}/
)

# Adding the launch file
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}/
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()